--- a/apps/mantine.dev/src/components/Shell2/DocsNavbar/DocsNavbar.module.css
+++ b/apps/mantine.dev/src/components/Shell2/DocsNavbar/DocsNavbar.module.css
@@ -4,4 +4,5 @@
   height: calc(100vh - var(--docs-header-height));
   flex: 0 0 var(--docs-navbar-width);
   border-inline-end: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-5));
+  background-color: var(--mantine-color-body);
 }
